[gd_scene load_steps=3 format=3 uid="uid://b61erq47uaoju"]

[ext_resource type="Script" path="res://Scripts/multiplayer.gd" id="1_1eoga"]
[ext_resource type="Script" path="res://Scripts/player_list.gd" id="2_71sko"]

[node name="Multiplayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1eoga")

[node name="Host" type="Button" parent="."]
auto_translate_mode = 1
visible = false
layout_mode = 0
offset_top = 256.0
offset_right = 1920.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 50
text = "Host"

[node name="Back" type="Button" parent="."]
auto_translate_mode = 1
visible = false
layout_mode = 0
offset_top = 768.0
offset_right = 1920.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 50
text = "Back
"

[node name="Join" type="Button" parent="."]
auto_translate_mode = 1
visible = false
layout_mode = 0
offset_top = 512.0
offset_right = 1920.0
offset_bottom = 704.0
theme_override_font_sizes/font_size = 50
text = "Join"

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 100
text = "Multiplayer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostMenu" type="Control" parent="."]
auto_translate_mode = 1
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="HostMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 100
text = "Host"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="HostMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 768.0
offset_right = 1920.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 50
text = "Back
"

[node name="Start" type="Button" parent="HostMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 256.0
offset_right = 960.0
offset_bottom = 448.0
theme_override_font_sizes/font_size = 50
text = "Start Game"

[node name="Panel" type="Panel" parent="HostMenu"]
layout_mode = 0
offset_left = 1024.0
offset_top = 256.0
offset_right = 1856.0
offset_bottom = 704.0
script = ExtResource("2_71sko")

[node name="Label" type="Label" parent="HostMenu/Panel"]
layout_mode = 0
offset_right = 832.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 45
text = "Player List"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="HostMenu/Panel"]
wait_time = 0.25
autostart = true

[node name="ItemList" type="ItemList" parent="HostMenu/Panel"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 64.0
offset_right = 832.0
offset_bottom = 448.0

[node name="PreMenu" type="Control" parent="."]
auto_translate_mode = 1
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PreMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 100
text = "Host
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="PreMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 304.0
offset_right = 384.0
offset_bottom = 373.0
theme_override_font_sizes/font_size = 50
text = "Username"
vertical_alignment = 1

[node name="LineEdit2" type="LineEdit" parent="PreMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 373.0
offset_right = 1920.0
offset_bottom = 444.0
theme_override_font_sizes/font_size = 45

[node name="Back" type="Button" parent="PreMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 768.0
offset_right = 1920.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 50
text = "Back
"

[node name="Host" type="Button" parent="PreMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 512.0
offset_right = 1920.0
offset_bottom = 704.0
theme_override_font_sizes/font_size = 50
text = "Host"

[node name="JoinMenu" type="Control" parent="."]
auto_translate_mode = 1
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="JoinMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 100
text = "Join
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="JoinMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 512.0
offset_right = 1920.0
offset_bottom = 704.0
theme_override_font_sizes/font_size = 50
text = "Join Game"

[node name="Label2" type="Label" parent="JoinMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 160.0
offset_right = 384.0
offset_bottom = 229.0
theme_override_font_sizes/font_size = 50
text = "IP
"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="JoinMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 229.0
offset_right = 1920.0
offset_bottom = 300.0
theme_override_font_sizes/font_size = 45
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[node name="JoinedMenu" type="Control" parent="."]
auto_translate_mode = 1
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="JoinedMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 192.0
theme_override_font_sizes/font_size = 100
text = "Join
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Disconnect" type="Button" parent="JoinedMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 768.0
offset_right = 1920.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 50
text = "Disconnect"

[node name="PlayerList" type="Panel" parent="JoinedMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 256.0
offset_right = 1920.0
offset_bottom = 704.0
script = ExtResource("2_71sko")

[node name="ItemList" type="ItemList" parent="JoinedMenu/PlayerList"]
layout_mode = 0
offset_top = 64.0
offset_right = 1920.0
offset_bottom = 448.0

[node name="Timer" type="Timer" parent="JoinedMenu/PlayerList"]
wait_time = 0.25
autostart = true

[node name="Label2" type="Label" parent="JoinedMenu"]
auto_translate_mode = 1
layout_mode = 0
offset_top = 256.0
offset_right = 1920.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 45
text = "Player List"
horizontal_alignment = 1

[connection signal="pressed" from="Host" to="." method="_on_hostmenu_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="HostMenu/Back" to="." method="_on_child_back_pressed"]
[connection signal="pressed" from="HostMenu/Start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="HostMenu/Panel/Timer" to="HostMenu/Panel" method="_on_timer_timeout"]
[connection signal="pressed" from="PreMenu/Back" to="." method="_on_child_back_pressed"]
[connection signal="pressed" from="PreMenu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="JoinMenu/Start" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="JoinedMenu/Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="timeout" from="JoinedMenu/PlayerList/Timer" to="JoinedMenu/PlayerList" method="_on_timer_timeout"]
